# PSG

Avocado/: Avocado.sln  Avocado_vs12.sln  BackLog.txt
Avocado/Avocado/: Avocado.cpp  Avocado.h  Avocado.idl  Avocado.options  Avocado.rc  Avocado.reg  Avocado.vcxproj  AvocadoBugs.xml  AvocadoDoc.cpp  AvocadoDoc.h  AvocadoGallery.cpp  AvocadoGallery.h  AvocadoOptions.conf  AvocadoOptions.cpp  AvocadoOptions.h  AvocadoPathUtils.h  AvocadoView.cpp  AvocadoView.h  Avocado_h.h  Avocado_i.c  Avocado_vs12.vcxproj  Avocado_vs12.vcxproj.filters  CElevator.cpp  CElevator.h  CWebBrowser2.cpp  CWebBrowser2.h  ClassDiagram12.cd  ClassDiagram2.cd  DIBSectionLite.cpp  DIBSectionLite.h  ElementView.cpp  ElementView.h  FileView.cpp  FileView.h  HtmlEditor.cpp  HtmlEditor.h  IpFrame.cpp  IpFrame.h  MainFrm.cpp  MainFrm.h  (+24 more)
Avocado/AvocadoActiveXCtrl/: AvocadoActiveXCtrl.aps  AvocadoActiveXCtrl.cpp  AvocadoActiveXCtrl.def  AvocadoActiveXCtrl.h  AvocadoActiveXCtrl.idl  AvocadoActiveXCtrl.rc  AvocadoActiveXCtrl.vcxproj  AvocadoActiveXCtrl.vcxproj.filters  AvocadoActiveXCtrlCtrl.cpp  AvocadoActiveXCtrlCtrl.h  AvocadoActiveXCtrlPropPage.cpp  AvocadoActiveXCtrlPropPage.h  AvocadoActiveXCtrl_i.c  AvocadoActiveXCtrlidl.h  ReadMe.txt  Resource.h  stdafx.cpp
Avocado/AvocadoEngine/: AnimationManipulator.cpp  AnimationManipulator.h  AvocadoAnimationManipulatorModule.cpp  AvocadoAnimationManipulatorModule.h  AvocadoAnnotaionsModule - Copy.h  AvocadoAnnotationsModule.cpp  AvocadoAnnotationsModule.h  AvocadoAppInterface.cpp  AvocadoAppInterface.h  AvocadoAppOptionsInterface.h  AvocadoDraggerModule.cpp  AvocadoDraggerModule.h  AvocadoEngine.cpp  AvocadoEngine.h  AvocadoEngine.vcxproj  AvocadoEngine.vcxproj.filters  AvocadoEngineDoc.cpp  AvocadoEngineDoc.h  AvocadoEngineObject.cpp  AvocadoEngineObject.h  AvocadoEngineOptions.cpp  AvocadoEngineView.cpp  AvocadoEngineView.h  AvocadoEngine_vs12.vcxproj  AvocadoImportModule - Copy.cpp  AvocadoImportModule.cpp  AvocadoImportModule.h  AvocadoInternalModules.h  AvocadoManipulator - Copy (2).cpp  AvocadoManipulator.cpp  AvocadoManipulator.h  (+37 more)
BServer/: BServer.sln
SceniX/samples/Win8Minimal/: CMakeLists.txt
SceniX/samples/Win8Minimal/src/: main.cpp  resource.h  resource.rc
(+622 files in other folders)
